# ROS_Tracer

./: .gitignore  README.md  README.md.save
3rd/: conan_install.sh  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt
controller/: CMakeLists.txt  README.md  mpc_controller_plugin.xml  package.xml
controller/include/common/geometry/: mpc_controller_params.yaml
controller/src/: an_move_along.cpp  an_move_along_realworld.cpp  an_move_along_side.cpp  an_odom.cpp  an_sub (copy).cpp  an_sub.cpp  communication_node.cpp  custom_scan_filter.cpp  default_waypoint.cpp  draw_one_path.py  draw_path_on_map.py  draw_two_path.py  fuzzy_waypoint.cpp  lidar_checker.cpp  move_along_oldversion.cpp  move_along_one_narrow.cpp  move_along_one_narrow_side.cpp  move_along_tracer_4.cpp  move_along_tracer_4_side.cpp  odom_new.cpp  param_monitor.py  record_data.cpp  record_dwa.cpp  record_fuzzy.cpp  set_goal.py  sim_along_4input_side.cpp  sim_along_5input.cpp  sim_along_wall_p3dx_2.cpp  sub_pub_cmd_test_new.cpp  wei_fuzzyTT.cpp  wei_move_along (copy).cpp  wei_move_along.cpp  wei_move_along_v1.cpp  wei_mpc.cpp  wei_odom.cpp  wei_odom_v1.cpp  wei_odom_v2.cpp  wei_sub (copy).cpp  wei_sub.cpp  wei_sub_v1.cpp
controller/src/copy_or_useless/: ring_angle.cpp
controller/src/data/: best_dwa_env2.txt  color.txt  data.txt  data_dwa.txt  data_dwa4.txt  data_dwa5-1.txt  data_dwa5.txt  data_dwa6.txt  data_fuzzy.txt  data_fuzzy4.txt  data_fuzzy5.txt  data_fuzzy6-1.txt  data_fuzzy6.txt  data_mpc4.txt  data_mpc6.txt  mpc_0506_data.txt  nav5.txt  nav6.txt  recorded_data_eight_f_dwa.txt  recorded_data_env2_dwa.txt  recorded_data_env2_fuz.txt  recorded_data_narrow_wall_fuz.txt
controller/src/data/env2_old_data/: recorded_data_env_fuz.txt
controller/src/data/narrow_old_data/: recorded_data1.txt  recorded_data2.txt
controller/src/fuzzy_controller/along_wall_controller/: temp_w12.txt  temp_w9.txt
controller/src/position_random/: amcl_position.txt  local_target-111.txt  position_targetxx.txt  save_ave_dis_error.txt  save_ave_speed.txt
controller/src/position_random/real-map2s/: dis_error-1.txt  distance-NEW.txt  position_along_wall_fuzzy_pid_NEW2.txt  posititon_search_target_fuzzy_pid_NEW2.txt  velocity-NEW.txt  velocity-every-1.txt
gesture_ws/gesture_recognition/src/: gesture_controll.cpp
tracer_velodyne/: README.md
tracer_velodyne/tracer_ros/tracer_base/: CMakeLists.txt
tracer_velodyne/tracer_ros/tracer_bringup/launch/: fuzzy_controller.launch  tracer_integrate.launch
tracer_velodyne/tracer_ros/tracer_description/rviz/: navigation.rviz  navigation_octo.rviz
tracer_velodyne/tracer_ros/tracer_description/urdf/: tracer_v1.xacro
tracer_velodyne/tracer_ros/tracer_gazebo_sim/launch/: angle_filter.launch  tracer_car.launch  tracer_car_empty.launch  tracer_car_map.launch  tracer_car_paper.launch  tracer_gmapping.launch  tracer_paper.launch  tracer_slam_gmapping (copy).launch  tracer_slam_gmapping.launch
tracer_velodyne/tracer_ros/tracer_gazebo_sim/worlds/20250102/: model.config  model.sdf
tracer_velodyne/tracer_ros/tracer_msgs/: CMakeLists.txt  package.xml
tracer_velodyne/tracer_ros/tracer_navigation/: CMakeLists.txt  mpc_plugin.xml  package.xml
tracer_velodyne/tracer_ros/tracer_navigation/config/: laser_filter.yaml
tracer_velodyne/tracer_ros/tracer_navigation/include/controller/: mpc_controller.h
tracer_velodyne/tracer_ros/tracer_navigation/launch/: laser_filter.launch  move_base_fuzzy.launch  move_base_mpc.launch  tracer_known_map.launch  tracer_known_map_real.launch  tracer_navigation_fuzzy.launch  tracer_navigation_mpc (copy).launch
tracer_velodyne/tracer_ros/tracer_navigation/p3dx_config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  mpc_controller_params.yaml  mpc_params (copy).yaml
tracer_velodyne/velodyne/velodyne_pointcloud/: laser_filter.yaml
tracer_velodyne/velodyne/velodyne_pointcloud/launch/: VLP16_points.launch  laserscan_nodelet.launch  transform_nodelet.launch
tracer_velodyne/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
tracer_velodyne/velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
