<?xml version="1.0"?>
<package format="2">
  <name>tracer_msgs</name>
  <version>0.3.3</version>
  <description>Messages for AgileX Tracer</description>

  <author email="contact@westonrobot.com">TODO</author>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>

